k8s/infra/monitoring/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "5"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`grafana.local`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
